@@ -1,5 +1,10 @@
 2005-04-04  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-main.c:
+	Initialise the audio profiles before creating an SjExtractor.
+
+2005-04-04  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	Use Stop instead of Cancel in the progress dialog.
 
